--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
    "name": "@mechcloud/micro-app",
    "private": true,
    "version": "1.0.0",
-   "main": "./dist/micro-app.umd.js",
-   "module": "./dist/micro-app.es.js",
+   "module": "./dist/vue-components.mjs",
    "scripts": {
       "build": "vite build",
-      "preview": "vite preview --port 8081"
+      "preview": "vite preview --host 0.0.0.0"
    },
    "dependencies": {
-      "vue": "^3.2.25",
-      "vue-router": "^4.0.15"
+      "vue": "^3.2.47"
    },
    "devDependencies": {
-      "@vitejs/plugin-vue": "^2.3.3",
-      "typescript": "^4.5.4",
-      "vite": "^2.9.9",
-      "vue-tsc": "^0.34.7"
+      "@rollup/plugin-replace": "^5.0.2",
+      "@vitejs/plugin-vue": "^4.0.0",
+      "eslint": "^8.35.0",
+      "eslint-plugin-vue": "^9.9.0",
+      "postcss-nested": "^6.0.1",
+      "vite": "^4.1.4",
+      "yarn-upgrade-all": "^0.7.2"
    }
 }
