--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "module": "./dist/vue-components.mjs",
    "scripts": {
       "build": "vite build",
-      "preview": "vite preview --host 0.0.0.0"
+      "preview": "vite preview --host 0.0.0.0 --port 8091"
    },
    "dependencies": {
       "vue": "^3.2.47"
