--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
       "preview": "vite preview --host :: --port 8091"
    },
    "dependencies": {
-      "vue": "^3.2.47"
+      "vue": "^3.3.4"
    },
    "devDependencies": {
       "@rollup/plugin-replace": "^5.0.2",
       "@rollup/plugin-virtual": "^3.0.1",
-      "@vitejs/plugin-vue": "^4.0.0",
-      "eslint": "^8.35.0",
-      "eslint-plugin-vue": "^9.9.0",
+      "@vitejs/plugin-vue": "^4.3.4",
+      "eslint": "^8.48.0",
+      "eslint-plugin-vue": "^9.17.0",
+      "postcss": "^8.4.29",
       "postcss-nested": "^6.0.1",
-      "vite": "^4.1.4",
+      "vite": "^4.4.9",
       "yarn-upgrade-all": "^0.7.2"
    }
 }
